# bmpDraw

./: CMakeLists.txt  README.md  draw.cpp  draw.hpp  main.cpp
